--- a/trademanager/src/main/resources/application-local.yml
+++ b/trademanager/src/main/resources/application-local.yml
@@ -26,7 +26,7 @@ rabbitmq:
   trade-exchange:
     name: trade-exchange
   trade-routing:
-    key: trade-routing_key
+    key: trade-routing-key
 
   user-queue:
     name: user-queue
